syntax = "proto3";

package auth;


option go_package = "github.com/ali-naseri-php/Askly/proto/auth;authpb";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
